# patent-hunter

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-triage.yml  integration.yml  test.yml
deploy/launchd/: com.patenthunter.weekly.plist.template
docs/adr/: ADR-001-data-source-bigquery.md  ADR-002-claude-cli-cwd-tmp.md  ADR-003-dual-independent-scoring.md  ADR-004-langgraph-gr-parameter.md  ADR-template.md  README.md
evals/: cases.json  run_eval.py  run_eval_live.py
scripts/: auto_issue.py  auto_triage.py  dryrun.py  run_checks.py  run_tests.sh  run_weekly.sh  weekly_insights.py
src/patent_hunter/: __init__.py  __main__.py  cli.py  models.py  observability.py  runner.py  week.py
src/patent_hunter/checkpointers/: __init__.py  base.py
src/patent_hunter/fetchers/: __init__.py  base.py  bigquery.py  categories.py  legacy_patentsview.py  patentsview.py
tests/: conftest.py  test_auto_issue.py  test_auto_triage_syntax.py  test_cli.py  test_dryrun_live.py  test_models.py  test_observability.py  test_runner.py  test_week.py  test_weekly_insights.py
tests/fetchers/: __init__.py  test_bigquery.py  test_categories.py  test_patentsview.py
tests/graph/: test_graph.py
tests/integration/: conftest.py  test_bigquery_real.py  test_pipeline_smoke.py
tests/io/: __init__.py  test_report.py
tests/notifications/: test_discord.py
tests/scorers/: __init__.py  test_codex.py  test_json_extract.py  test_prompts.py  test_sonnet.py
web/: package-lock.json  package.json  tsconfig.json
web/src/: index.ts
(+18 files in other folders)
