[project]
name = "patent_hunter"
version = "0.1.0"
description = "Phase 1 CLI: fetch expired US utility patents and score commercial viability with Claude CLI x Codex in parallel."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "katsuyuki-shimbo" }]

dependencies = [
    "google-cloud-bigquery>=3.21.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
patent-hunter = "patent_hunter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patent_hunter"]

[tool.hatch.build.targets.wheel.force-include]
"src/patent_hunter/io/templates" = "patent_hunter/io/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real external services (BigQuery, Claude CLI). Excluded by default. Run with `pytest -m integration`.",
]
addopts = "-m 'not integration'"
